force-app/main/default/objects/Request__c/Request__c.object-meta.xml
<CustomObject>
    <description>The extension of the Case object where customer requests get fulfilled.</description>
    <label>Aanvraag</label>
    <nameField>
        <displayFormat>AN-{00000}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Aanvragen</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>