force-app/main/default/objects/Request__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Contact that is associated with the Request</description>
    <inlineHelpText>What Contact is associated with the Request?</inlineHelpText>
    <label>Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Requests</relationshipName>
    <type>Lookup</type>
</CustomField>