force-app/main/default/objects/Request__c/fields/External_Status__c.field-meta.xml
<CustomField>
    <fullName>External_Status__c</fullName>
    <description>What is the status of the Request in an external system?</description>
    <inlineHelpText>What is the status of the Request in an external system?</inlineHelpText>
    <label>External Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>