force-app/main/default/objects/Request__c/fields/Request_Origin__c.field-meta.xml
<CustomField>
    <fullName>Request_Origin__c</fullName>
    <description>Where did the Request originate?</description>
    <inlineHelpText>Where did the Request originate?</inlineHelpText>
    <label>Request Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Case</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>