force-app/main/default/objects/Request__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The supplier / partner organization to be assigned on this request</description>
    <inlineHelpText>Assign the supplier / partner organization that has to manage this request</inlineHelpText>
    <label>Supplier</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Assigned Requests</relationshipLabel>
    <relationshipName>External_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>