force-app/main/default/objects/Request__c/fields/Supplier_Name_Plate__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Name_Plate__c</fullName>
    <description>This field is a temporary field for the name plate proces in phase 1 because we don&#39;t want supplier / creditor accounts in Salesforce in phase 1.</description>
    <label>Supplier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Kellers IJzerhandel B.V.</fullName>
                <label>Keller&#39;s IJzerhandel B.V.</label>
            </value>
            <value>
                <fullName>Het Zuider Sleutelhuis B.V.</fullName>
            </value>
            <value>
                <fullName>IJzerhandel Overschie</fullName>
            </value>
            <value>
                <fullName>Weijntjes Hang- En Sluitwerk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>