force-app/main/default/objects/Request__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>What is the Type of customer Request?</description>
    <inlineHelpText>What is the Type of customer Request?</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Name Plate</fullName>
            </value>
            <value>
                <fullName>Self-Installed Facility</fullName>
            </value>
            <value>
                <fullName>Payment Arrangement</fullName>
            </value>
            <value>
                <fullName>Landlord Statement</fullName>
            </value>
            <value>
                <fullName>Maintenance Inspection</fullName>
            </value>
            <value>
                <fullName>Repair Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>